1.71 Beta 4 (2013-05-28):
  Added feature MR-435 - Add digital signature check to updater
  Fixed issue MR-255 - The version of the RDP AX client should be updated to 7
  Fixed issue MR-392 - Sessions Panel - context menu entries need to be context aware
  Fixed issue MR-422 - Gives error Object reference not set to an instance of an object.
  Fixed issue MR-424 - Import of a few Linux SSH2 hosts discovered via the port scan tool results in a UE
  Fixed issue MR-439 - MRemoteNG 1.70 does not start
  Fixed issue MR-440 - RDP import with non-standard port
  Fixed issue MR-443 - Instructions for eolwtscom.dll registration for Portable version are inaccurate
  Fixed issue MR-446 - Putty saved sessions show in connection panel
  Fixed issue MR-459 - Maximized -> Minimized -> Restored results in mangled active display
  Fixed issue MR-463 - Add support for LoadBalanceInfo to RDP
  Fixed issue MR-470 - Quick Connect to Linux server uses invalid credentials
  Fixed issue MR-471 - PuTTY Saved Sessions disappears from connection list
  Fixed issue MR-487 - Initiate connections on MouseUp event
  Added PuTTY Session Settings command to the Config panel for PuTTY Saved Sessions.
  Updated translations.
  Added Norwegian (Bokmål) and Portuguese (Brazil) translations.
  Added Spanish translation to the installer.
  Fixed an exception or crash when choosing unnamed colors for themes.
  Fixed possible error "Control does not support transparent background colors" when modifying themes.
  Fixed changes to the active theme not being saved reliably.
  Fixed handling of the plus (+) character in PuTTY session names.
  Changed Internet Explorer to no longer force IE7 compatibility mode.
  Changed the "Launch PuTTY" button in the "Options" dialog to open PuTTY from the path the user has currently set, instead of what was previously saved.
  Improved update and announcement checking.
  Improved the PuTTY Saved Sessions list to update automatically when any changes are made.